--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,69 @@
         android:layout_height="match_parent"
         tools:context="com.rommelrico.basicphrases.MainActivity">
 
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+    <GridLayout
+            android:layout_width="368dp"
+            android:layout_height="495dp" app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp" android:id="@+id/gridLayout" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp" android:rowCount="4"
+            android:columnCount="2">
 
+        <Button
+                android:text="Button"
+                android:id="@+id/button"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill" />
+
+        <Button
+                android:text="Button"
+                android:id="@+id/button"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill" />
+
+        <Button
+                android:text="Button"
+                android:id="@+id/button"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill" />
+
+        <Button
+                android:text="Button"
+                android:id="@+id/button"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill" />
+
+        <Button
+                android:text="Button"
+                android:id="@+id/button"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill" />
+
+        <Button
+                android:text="Button"
+                android:id="@+id/button"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill" />
+
+        <Button
+                android:text="Button"
+                android:id="@+id/button"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill" />
+
+        <Button
+                android:text="Button"
+                android:id="@+id/button"
+                android:layout_rowWeight="1"
+                android:layout_columnWeight="1"
+                android:layout_gravity="fill" />
+        
+    </GridLayout>
 </android.support.constraint.ConstraintLayout>
