--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,67 +9,99 @@
 
     <GridLayout
             android:layout_width="368dp"
-            android:layout_height="495dp" app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp" android:id="@+id/gridLayout" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp" android:rowCount="4"
-            android:columnCount="2">
+            android:layout_height="495dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:columnCount="2"
+            android:rowCount="4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
         <Button
-                android:text="Button"
-                android:id="@+id/button"
+                android:text="DO YOU\nSPEAK ENGLISH?"
+                android:id="@+id/button1"
+                android:layout_gravity="fill"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_gravity="fill" />
+                android:tag="doyouspeakenglish"
+                android:onClick="playPhrase"
+        />
 
         <Button
-                android:text="Button"
-                android:id="@+id/button"
+                android:text="GOOD EVENING"
+                android:id="@+id/button2"
+                android:layout_gravity="fill"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_gravity="fill" />
+                android:tag="goodevening"
+                android:onClick="playPhrase"
+        />
 
         <Button
-                android:text="Button"
-                android:id="@+id/button"
+                android:text="HELLO"
+                android:id="@+id/button3"
+                android:layout_gravity="fill"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_gravity="fill" />
+                android:tag="hello"
+                android:onClick="playPhrase"
+        />
 
         <Button
-                android:text="Button"
-                android:id="@+id/button"
+                android:text="HOW ARE YOU?"
+                android:id="@+id/button4"
+                android:layout_gravity="fill"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_gravity="fill" />
+                android:tag="howareyou"
+                android:onClick="playPhrase"
+        />
 
         <Button
-                android:text="Button"
-                android:id="@+id/button"
+                android:text="I LIVE IN..."
+                android:id="@+id/button5"
+                android:layout_gravity="fill"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_gravity="fill" />
+                android:tag="ilivein"
+                android:onClick="playPhrase"
+        />
 
         <Button
-                android:text="Button"
-                android:id="@+id/button"
+                android:text="MY NAME IS..."
+                android:id="@+id/button6"
+                android:layout_gravity="fill"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_gravity="fill" />
+                android:tag="mynameis"
+                android:onClick="playPhrase"
+        />
 
         <Button
-                android:text="Button"
-                android:id="@+id/button"
+                android:text="PLEASE"
+                android:id="@+id/button7"
+                android:layout_gravity="fill"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_gravity="fill" />
+                android:tag="please"
+                android:onClick="playPhrase"
+        />
 
         <Button
-                android:text="Button"
+                android:text="WELCOME"
                 android:id="@+id/button"
+                android:layout_gravity="fill"
                 android:layout_rowWeight="1"
                 android:layout_columnWeight="1"
-                android:layout_gravity="fill" />
+                android:tag="welcome"
+                android:onClick="playPhrase"
+        />
+
+
 
     </GridLayout>
 </android.support.constraint.ConstraintLayout>
